<resources>
    <string name="app_name">profile_app</string>
    <string name="welcome">Welcome \nto our world</string>
    <string name="paragraph">"Hi, I’m Asmaa Hamed, a passionate\nAndroid developer,\nI enjoy turning ideas into functional\nand engaging apps, always striving to\nimprove user experiences. With a focus\non continuous learning."</string>
    <string name="btn">Get Started</string>
    <string name="profile">Profile</string>
    <string name="mohamed">Mohammed Hamed</string>
    <string name="gmail">mh0131553@gmail.com</string>
    <string name="Notification">Notification</string>
    <string name="Calender">Calender</string>
    <string name="Gallery">Gallery</string>
    <string name="My_Playlist">My Playlist</string>
    <string name="Share">Share</string>
    <string name="Loge_oUt">Logeout</string>
    <string name="hi_mohamed">Hi, Mohamed</string>
    <string name="find">Find Your Favorites \nHere</string>
    <string name="search">Search...</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="social">Social</string>
    <string name="trends">Trends</string>
    <string name="view_all">View all</string>
    <string name="submit">submit</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="home_btn">Home</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
</resources>
